--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -582,7 +582,7 @@
                                     </div>
                                 </div>
                             </div>
-                           <!-- 右側資料widget -->
+                          <!-- 右側資料widget -->
                             <div class="publish_block">
                                 <!-- 每種不同功能，都用block區分 -->
                                 <div class="block">
@@ -625,48 +625,29 @@
                                                 disabled><span>放置愛書亞</span></label>
                                         <label><input name="radioStatus" type="radio" value=""
                                                 disabled><span>不放愛書亞</span></label>
+                                        <label><input name="radioStatus" type="radio" value="" checked
+                                                disabled><span>放置搜尋</span></label>
+                                        <label><input name="radioStatus" type="radio" value=""
+                                                disabled><span>不放搜尋</span></label>
                                     </div>
                                     <div class="btn_grp">
-                                        <button class="btn btn-primary">確認轉介</button>
-                                        <div class="form_content">
-                                            <div class="checkbox_grp form_inline">
-                                            </div>
-                                        </div>
+                                        <button class="btn btn-green">取消</button>
+                                        <button class="btn btn-orange">代鍵</button>
                                     </div>
                                 </div>
                                 <div class="block">
                                     <div class="_head">
-                                        <h3>選項資訊</h3>
+                                        <h3>編輯紀錄</h3>
                                     </div>
-                                    <div class="flex-form">
-                                        <div class="form_grp">
-                                            <div class="form_title">選項</div>
-                                            <div class="form_content">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="btn_grp">
-                                        <a href="#" class="btn btn-green">取消</a>
-                                        <a href="#" class="btn btn-primary">代鍵</a>
-                                    </div>
-                                </div>
-                                <div class="block">
-                                    <div class="_head">
-                                        <div class="block">
-                                            <div class="_head">
-                                                <h3>編輯紀錄</h3>
-                                            </div>
-                                            <div class="log">
-                                                <ul>
-                                                    <li>
-                                                        <span><i class="i_man"></i></span><a href="#">系統管理者(admin)</a>
-                                                    </li>
-                                                    <li>
-                                                        <span><i class="i_clock"></i></span>2024/11/26 14:26:10
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
+                                    <div class="log">
+                                        <ul>
+                                            <li>
+                                                <span><i class="i_man"></i></span><a href="#">系統管理者(admin)</a>
+                                            </li>
+                                            <li>
+                                                <span><i class="i_clock"></i></span>2019/11/26 14:26:10
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -674,7 +655,9 @@
                     </div>
                 </div>
             </div>
-            <!-- JS-->
+        </div>
+    </div>
+    <!-- JS-->
             <script src="js/jquery-3.3.1.min.js"></script>
             <script src="vendor/jquery.easing.min.js"></script>
             <!-- template customize js -->
