--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -166,7 +166,6 @@
                                                             <label><input name="MenuUse" id="pcMenuUse" type="radio"
                                                                     value="pcMenuUse"><span>公開</span></label>
                                                             <div class="btn_grp">
-
                                                             </div>
                                                         </div>
                                                     </div>
@@ -270,7 +269,7 @@
                                                         href="https://en.wikipedia.org/wiki/Printer%27s_key"
                                                         target="_blank" style="display:none;">維基百科</a>
                                                     <hr>
-                                                   <div class="form_grp form_inline">
+                                                    <div class="form_grp form_inline">
                                                         <div class="labelEffect">
                                                             <select id="" name="" class="dynamicCol used">
                                                                 <option value="1" selected>請選擇</option>
@@ -409,7 +408,7 @@
                                                             <label>其他</label>
                                                         </div>
                                                     </div>
-                                                   <div class="form_grp">
+                                                    <div class="form_grp">
                                                         <div class="labelEffect">
                                                             <textarea>請輸入意見</textarea>
                                                             <label for="userId">審核意見<abbr></abbr></label>
@@ -528,65 +527,51 @@
                                     <div>
                                         <div class="content__wrapper">
                                             <div class="_head">
-                                                <h3>讀者基本資料</h3>
+                                                <h3>基本資料</h3>
                                             </div>
-                                            <div class="_content">
-                                                <div class="flex-form">
-                                                    <!--h4>基本資訊</h4-->
-                                                    <div class="form_grp form_inline">
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="林小姐" disabled>
-                                                            <label>姓名</label>
-                                                        </div>
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="ujkkk@gmail.com" disabled>
-                                                            <label>電子郵件</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form_grp form_inline">
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="(02)2660-7600" disabled>
-                                                            <label>聯絡電話</label>
-                                                        </div>
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="選填，例如學校" disabled>
-                                                            <label>單位</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form_grp form_inline">
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="無" disabled>
-                                                            <label>住家電話</label>
-                                                        </div>
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="無" disabled>
-                                                            <label>手機</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form_grp form_inline">
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="46~55" disabled>
-                                                            <label>年齡</label>
-                                                        </div>
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="家管" disabled>
-                                                            <label>職業</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form_grp form_inline">
-                                                        <div class="labelEffect">
-                                                            <input name="" type="text" value="大學" disabled>
-                                                            <label>教育</label>
-                                                        </div>
+                                            <div class="flex-form">
+                                                <div class="form_grp">
+                                                    <div class="form_title">驗證<abbr>*</abbr></div>
+                                                    <div class="form_content">
+                                                        <input type="text" name="vertify_id" id="vertify_id"
+                                                            placeholder="請輸入身分證號或閱讀證號驗證"
+                                                            style="display:inline;width:65%;" />
+                                                        <input type="button" value="驗證" class="btn btn-submit used"
+                                                            onclick="myFunction()" />
                                                     </div>
                                                 </div>
-                                                <hr>
+                                                <div class="form_grp" style="margin-top: 20px;">
+                                                    <div class="form_title">讀者證號<abbr>*</abbr></div>
+                                                    <div class="form_content">
+                                                        <input type="text" name="usr_id" id="usr_id"
+                                                            placeholder="請使用驗證功能帶入" readonly />
+                                                    </div>
+                                                </div>
+                                                <div class="form_grp" style="margin-top: 20px;">
+                                                    <div class="form_title">讀者姓名<abbr>*</abbr></div>
+                                                    <div class="form_content">
+                                                        <input type="text" name="usr_name" id="usr_name" />
+                                                    </div>
+                                                </div>
+                                                <div class="form_grp" style="margin-top: 20px;">
+                                                    <div class="form_title">Email</div>
+                                                    <div class="form_content">
+                                                        <input type="text" name="usr_email" id="usr_email" />
+                                                    </div>
+                                                    <div class="form_grp" style="margin-top: 20px;">
+                                                        <div class="form_title">電話</div>
+                                                        <div class="form_content">
+                                                            <input type="text" name="usr_email" id="usr_email" />
+                                                        </div>
+                                                        <hr>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                                                        <!-- 右側資料widget -->
+                            <!-- 右側資料widget -->
                             <div class="publish_block">
                                 <!-- 每種不同功能，都用block區分 -->
                                 <div class="block">
@@ -597,7 +582,8 @@
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <select id="" name="" class="used">
-                                                    <option value="" selected="" disabled="disabled">請選擇</option>
+                                                    <option value="" selected="" disabled="disabled">請選擇
+                                                    </option>
                                                     <option value="選項1">區域1</option>
                                                     <option value="選項2">區域2</option>
                                                     <option value="選項3">區域3</option>
@@ -611,7 +597,8 @@
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <select id="" name="" class="used">
-                                                    <option value="" selected="" disabled="disabled">請選擇</option>
+                                                    <option value="" selected="" disabled="disabled">請選擇
+                                                    </option>
                                                     <option value="選項1">分館1</option>
                                                     <option value="選項2">分館2</option>
                                                 </select>
@@ -641,7 +628,8 @@
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <select id="" name="" class="used">
-                                                    <option value="" selected="" disabled="disabled">請選擇</option>
+                                                    <option value="" selected="" disabled="disabled">請選擇
+                                                    </option>
                                                     <option value="選項1">常見問題</option>
                                                     <option value="選項2">館務</option>
                                                     <option value="選項3">知識性</option>
@@ -655,7 +643,8 @@
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <select id="" name="" class="used">
-                                                    <option value="" selected="" disabled="disabled">請選擇</option>
+                                                    <option value="" selected="" disabled="disabled">請選擇
+                                                    </option>
                                                     <option value="選項1">閱覽服務問題</option>
                                                     <option value="選項2">終身學習問題</option>
                                                     <option value="選項3">館際合作問題</option>
