--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -138,7 +138,7 @@
                                     <div class="tab_items">
                                     </div>
                                 </div>
-                                                                <!--頁籤區-->
+                                <!--頁籤區-->
                                 <div class="tab__content">
                                     <!--tabcontent 1--><!--會員設定-->
                                     <div class="active">
@@ -195,6 +195,13 @@
                                                         <div class="labelEffect">
                                                             <textarea>請輸入意見</textarea>
                                                             <label for="userId">審核意見<abbr></abbr></label>
+                                                        </div>
+                                                        <div class="help">字數200/500</div>
+                                                    </div>
+                                                    <div class="form_grp">
+                                                        <div class="labelEffect">
+                                                            <textarea>館員回覆說明</textarea>
+                                                            <label for="userId">館員回覆說明<abbr></abbr></label>
                                                         </div>
                                                         <div class="help">字數200/500</div>
                                                     </div>
