--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -360,21 +360,11 @@
                                                             <label>處理方式/結果</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="館員姓名">
+                                                            <input name="" type="text" value="自動帶入館員姓名" disabled>
                                                             <label>回覆人員</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp form_inline">
-                                                        <div class="labelEffect">
-                                                            <select id="" name="" class="dynamicCol used">
-                                                                <option value="1" selected>請選擇</option>
-                                                                <OPTION value=1>類別1</OPTION>
-                                                                <OPTION value=2>類別2</OPTION>
-                                                                <OPTION value=3>類別3</OPTION>
-                                                                <OPTION value=4>類別4</OPTION>
-                                                            </select>
-                                                            <label>問題主題類別</label>
-                                                        </div>
                                                         <div class="labelEffect">
                                                             <select id="" name="" class="dynamicCol used">
                                                                 <option value="0" selected>請選擇</option>
@@ -385,8 +375,6 @@
                                                             </select>
                                                             <label>問題形式</label>
                                                         </div>
-                                                    </div>
-                                                    <div class="form_grp form_inline">
                                                         <div class="labelEffect">
                                                             <select id="" name="" class="dynamicCol used">
                                                                 <option value="1" selected>其他</option>
@@ -399,13 +387,13 @@
                                                             </select>
                                                             <label>回覆資料類型</label>
                                                         </div>
+                                                    </div>
+                                                    <div class="form_grp form_inline">
                                                         <div class="labelEffect">
                                                             <input name="" type="text" value="選擇其他請輸入文字"
                                                                 class="dynamicCol used">
                                                             <label>其他</label>
                                                         </div>
-                                                    </div>
-                                                    <div class="form_grp">
                                                         <div class="labelEffect">
                                                             <input name="" type="text" value="自動帶入長官姓名" disabled>
                                                             <label>審核者</label>
@@ -423,9 +411,10 @@
                                                             <textarea>文字 </textarea>
                                                             <label for="userId">館員回覆說明<abbr></abbr></label>
                                                         </div>
-                                                        <div class="help">館員回覆說明文字(字數200/500)</div>
+                                                        <div class="help">館員回覆說說明文字(字數200/500)</div>
                                                     </div>
                                                 </div>
+                                                <hr>
                                                 <div class="setting_block">
                                                     <h3>附件檔案上傳
                                                         <!--button class="btn btn-xs"><i class="i_addfile"></i>新增檔案</button-->
